--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
     <div class="Main">
-        <h1>Riddle</h1>
+        <h1>RIDDLE</h1>
         <a href="_" target="_blank">Tests done</a>
         <p>Riddle of the 100 jailers</p>
         
     </div>
     
     <div class="Results">
-        <button onclick="EjercicioAcertijo()">Start</button>
+        <a class="Boton" onclick="EjercicioAcertijo()">Start</a>
         <h2 class="White">Results</h2>
         <p class="White"></p>
         <p class="White"></p>
