--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2 class="White">Results</h2>
         <p class="Green"></p>
         <p class="Red"></p>
+        <p class="White"></p>
         <br>
         <h3 class="White">Organization box and value</p>
         <div class="View">
