--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     
     <div class="Results">
         <a class="Button" onclick="EjercicioAcertijo()">Start</a>
-        <h2 class="White">Results</h2>
+        <h2 class="Blue">Results:</h2>
+        <p class="White"></p>
         <p class="Green"></p>
         <p class="Red"></p>
         <p class="White"></p>
         <br>
-        <h3 class="White">Organization box and value</p>
+        <h3 class="Blue"> - Organization box and value - </p>
         <div class="View">
 
         </div>
